idea/testData/multiplatform/sealedInheritorsInComplexModuleStructure1/intermediate/platform.kt
package foo

actual sealed class <!LINE_MARKER("descr='Is subclassed by SealedWithPlatformActuals [main] SimpleShared'"), LINE_MARKER("descr='Has declaration in common module'")!>SealedWithSharedActual<!>
class SimpleShared : SealedWithPlatformActuals<!NO_CONSTRUCTOR!>()<!>
